General_NetSDK_Chn_Win32_IS_V3.42.0.R.141029/NetSDK_Chn_Bin/演示程序源码/ActiveX控件/ActiveX SRC/ActiveX SRC/dhnetsdk.h

#define WORD	unsigned short
#define BYTE	unsigned char
#define HWND	void*
///////////////////////////////Configuration Related Definition ///////////////////////////////

//-------------------------------Device Property ---------------------------------
// Device information 
typedef struct
{
	BYTE				sSerialNumber[DH_SERIALNO_LEN];	// SN
	BYTE				byAlarmInPortNum;		// DVR alarm input amount
	BYTE				byAlarmOutPortNum;		// DVR alarm output amount
	BYTE				byDiskNum;				// DVR HDD amount 
	BYTE				byDVRType;				// DVR type.Please refer to DHDEV_DEVICE_TYPE
	BYTE				byChanNum;				// DVR channel ammount 
} NET_DEVICEINFO, *LPNET_DEVICEINFO;
/************************************************************************
 ** Callback Function Definition 
 ***********************************************************************/

// Network disconnection callback fucntion original shape 
typedef void (CALLBACK *fDisConnect)(LONG lLoginID, char *pchDVRIP, LONG nDVRPort, DWORD dwUser);
// OSD callback fucntion original shape 
typedef void (CALLBACK *fDrawCallBack)(LONG lLoginID, LONG lPlayHandle, HDC hDC, DWORD dwUser);
// Alarm message callback fucntion original shape
typedef BOOL (CALLBACK *fMessCallBack)(LONG lCommand, LONG lLoginID, char *pBuf, DWORD dwBufLen, char *pchDVRIP, LONG nDVRPort, DWORD dwUser);
/************************************************************************
 ** Interface Definition 
 ***********************************************************************/

// SDK Initialization 
CLIENT_API BOOL CALL_METHOD CLIENT_Init(fDisConnect cbDisConnect, DWORD dwUser);
// SDK exit and clear
CLIENT_API void CALL_METHOD CLIENT_Cleanup();
// Set device connection timeout value and trial times 
CLIENT_API void CALL_METHOD CLIENT_SetConnectTime(int nWaitTime, int nTryTimes);
// Get SDK version informaiton 
CLIENT_API DWORD CALL_METHOD CLIENT_GetSDKVersion();
//------------------------------------------------------------------------

// Register to the device 
CLIENT_API LONG CALL_METHOD CLIENT_Login(char *pchDVRIP, WORD wDVRPort, char *pchUserName, char *pchPassword, LPNET_DEVICEINFO lpDeviceInfo, int *error = 0);
// Log out the device 
CLIENT_API BOOL CALL_METHOD CLIENT_Logout(LONG lLoginID);
//------------------------------------------------------------------------

// Begin real-time monitor 
CLIENT_API LONG CALL_METHOD CLIENT_RealPlay(LONG lLoginID, int nChannelID, HWND hWnd);
// Set screen overlay callback 
CLIENT_API void CALL_METHOD CLIENT_RigisterDrawFun(fDrawCallBack cbDraw, DWORD dwUser);
// Stop real-time preview 
CLIENT_API BOOL CALL_METHOD CLIENT_StopRealPlay(LONG lRealHandle);
//------------------------------------------------------------------------

// Set alarm callback fucntion 
CLIENT_API void CALL_METHOD CLIENT_SetDVRMessCallBack(fMessCallBack cbMessage,DWORD dwUser);